Set default UI language to English

--- a/tedam-face/WEB-INF/classes/config.properties
+++ b/tedam-face/WEB-INF/classes/config.properties
@@ -6,3 +6,5 @@ hibernate.tedamdb.connection.showSql = false
 hibernate.tedamdb.connection.driverClassName = com.mysql.jdbc.Driver
 hibernate.tedamdb.connection.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.tedamdb.connection.dataSourceClassName = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+tedam.defaultLanguage=en
+tedam.defaultCountry=US
